--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   </p>
 
   <h2>Recent</h2>
+
+  <p>
+    <span class="pub">Gemini Thinking </span><br />
+    Reasoning model, capable of showing its thoughts to improve performance and explainability.<br />
+    <a class="button" href="https://deepmind.google/technologies/gemini/flash-thinking/" target="_blank">Post</a>
+    <a class="button" href="https://x.com/JeffDean/status/1869789813232341267" target="_blank">Twitter</a>
+  </p>
+
   <p>
     <span class="pub">Genie 2: A large-scale foundation world model </span><br />
     Jack Parker-Holder, Philip Ball, Jake Bruce, Vibhavari Dasagi, Kristian Holsheimer, Christos Kaplanis, Alexandre Moufarek, Guy Scully, Jeremy Shar, Jimmy Shi, Stephen Spencer, Jessica Yung, Michael Dennis, Sultan Kenjeyev, Shangbang Long, Vlad Mnih, Harris Chan, Maxime Gazeau, Bonnie Li, Fabio Pardo, Luyu Wang, Lei Zhang, Frederic Besse, Tim Harley, Anna Mitenkova, Jane Wang, Jeff Clune, Demis Hassabis, Raia Hadsell, Adrian Bolton, Satinder Singh, Tim Rocktäschel<br />
@@ -63,7 +71,7 @@
   </div>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K0RYPN9X7"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K0RYPN9X7	"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
