--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <p>
     <span class="pub">Gemini Thinking </span><br />
-    Reasoning model, capable of showing its thoughts to improve performance and explainability.<br />
+    Reasoning model, excels in science and math, showing its thinking to solve complex problems.<br />
     <a class="button" href="https://deepmind.google/technologies/gemini/flash-thinking/" target="_blank">Post</a>
     <a class="button" href="https://x.com/JeffDean/status/1869789813232341267" target="_blank">Twitter</a>
   </p>
@@ -42,6 +42,12 @@
     <span class="pub">LMAct: In-Context Imitation Learning with Long Multimodal Demonstrations</span><br />
     Anian Ruoss, Fabio Pardo, Harris Chan, Bonnie Li, Volodymyr Mnih, Tim Genewein </br>
     <a class="button" href="https://arxiv.org/abs/2412.01441" target="_blank">Arxiv</a>
+  </p>
+
+  <p>
+    <span class="pub">Domain Adversarial Reinforcement Learning</span><br />
+    Bonnie Li, Vincent François-Lavet, Thang Doan, Joelle Pineau </br>
+    <a class="button" href="https://arxiv.org/abs/2102.07097" target="_blank">Arxiv</a>
   </p>
 
   <h2>Blog Post</h2>
