--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p>
     <span class="pub">Gemini Thinking </span><br />
     Reasoning model, excels in science and math, showing its thinking to solve complex problems.<br />
-    <a class="button" href="https://deepmind.google/technologies/gemini/flash-thinking/" target="_blank">Post</a>
+    <a class="button" href="https://deepmind.google/technologies/gemini/pro/" target="_blank">Post</a>
     <a class="button" href="https://x.com/JeffDean/status/1869789813232341267" target="_blank">Twitter</a>
   </p>
 
@@ -40,7 +40,8 @@
   
   <p>
     <span class="pub">LMAct: In-Context Imitation Learning with Long Multimodal Demonstrations</span><br />
-    Anian Ruoss, Fabio Pardo, Harris Chan, Bonnie Li, Volodymyr Mnih, Tim Genewein </br>
+    Anian Ruoss, Fabio Pardo, Harris Chan, Bonnie Li, Volodymyr Mnih, Tim Genewein. </br>
+    International Conference on Machine Learning (ICML), 2025. </br>
     <a class="button" href="https://arxiv.org/abs/2412.01441" target="_blank">Arxiv</a>
   </p>
 
