--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
   <p>
     <span class="pub">LMAct: In-Context Imitation Learning with Long Multimodal Demonstrations</span><br />
-    Anian Ruoss, Fabio Pardo, Harris Chan, Bonnie Li, Volodymyr Mnih, Tim Genewein. </br>
+    Anian Ruoss, Fabio Pardo, Harris Chan, Bonnie Li, Volodymyr Mnih, Tim Genewein. 
     International Conference on Machine Learning (ICML), 2025. </br>
     <a class="button" href="https://arxiv.org/abs/2412.01441" target="_blank">Arxiv</a>
   </p>
