--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
   <div>
   <p>
     I'm a researcher at <a href="https://deepmind.com" target="_blank">Google DeepMind</a>
-    working on frontier AI models in reasoning, world models, and general agents.
-    Previously I cofounded a deep tech start up backed by 
-    <a href="https://www.khoslaventures.com/" target="_blank">Khosla Ventures</a>.
+    working on frontier AI models.
   </p>
 
   <h2>Recent</h2>
 
   <p>
-    <span class="pub">Gemini Thinking </span><br />
-    Reasoning model, excels in science and math, showing its thinking to solve complex problems.<br />
-    <a class="button" href="https://deepmind.google/technologies/gemini/pro/" target="_blank">Post</a>
+    <span class="pub">Gemini 2.5 </span><br />
+    Pushing the Frontier with Advanced Reasoning, Multimodality, Long Context, and Next Generation Agentic Capabilities.<br />
+    <a class="button" href="https://arxiv.org/abs/2507.06261" target="_blank">Arxiv</a>
     <a class="button" href="https://x.com/JeffDean/status/1869789813232341267" target="_blank">Twitter</a>
   </p>
 
