--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <h2>Recent</h2>
 
   <p>
-    <span class="pub">Gemini 2.5 </span><br />
-    Pushing the Frontier with Advanced Reasoning, Multimodality, Long Context, and Next Generation Agentic Capabilities.<br />
+    <span class="pub">Gemini 2.5: Pushing the Frontier with Advanced Reasoning, Multimodality, Long Context, and Next Generation Agentic Capabilities </span><br />
+    Gemini Team<br />
     <a class="button" href="https://arxiv.org/abs/2507.06261" target="_blank">Arxiv</a>
     <a class="button" href="https://x.com/JeffDean/status/1869789813232341267" target="_blank">Twitter</a>
   </p>
