--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <a href="//www.linkedin.com/in/bonniesjli/" rel="noreferrer" target="_blank">
           <img src="/img/social/linkedin.svg" id="in" alt="LinkedIn" />
         </a>
+        <a href="//scholar.google.com/citations?hl=en&user=ycVHaDQAAAAJ" rel="noreferrer" target="_blank">
+          <img src="/img/social/scholar.svg" id="in" alt="Scholar" />
+        </a>
       </div>
     </div>
   </div>
